--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
-<html lang="{{ .Site.LanguageCode }}">
+<html lang="{{ .Site.LanguageCode | default "en-us" }}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
     <meta name="description" content="{{ .Site.Params.description }}">
-    
-    <!-- CSS -->
     <link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
-    {{ block "extra-head" . }}{{ end }}
+    {{ if .Site.Params.favicon }}
+    <link rel="icon" type="image/x-icon" href="{{ .Site.Params.favicon | relURL }}">
+    {{ end }}
 </head>
 <body>
-    <!-- Header partial -->
     {{ partial "header.html" . }}
     
-    <!-- Main content -->
     <main class="content">
         {{ block "main" . }}{{ end }}
     </main>
     
-    <!-- Footer partial -->
     {{ partial "footer.html" . }}
     
-    <!-- JavaScript -->
     <script src="{{ "js/main.js" | relURL }}"></script>
 </body>
 </html>
